index changed back, using redirect instead

--- a/index.html
+++ b/index.html
@@ -1,45 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-    
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="stylesheet" href="css/mainpage.css">
-    <title>Portfolio Website - Victoria Iascevschi</title>
-</head>
-<body>
-    <header>
-        <a href="#" class="logo">Victoria</a>
-        <nav>
-            <a href="mainpage.html" class="active"> Home</a>
-            <a href="reflection_report.html">Reflection Report</a>
-            <a href="study_career_coaching.html">Study Career Coaching</a>
-            <a href="feedbackforms.html">Feedbackforms</a>
-            <a href="projectplan.html">Project Plan</a>
-            <a href="communication.html">Communication</a>
-            <a href="presentation.html">Presentation</a>
-            <a href="meeting_techniques.html">Meeting Techniques</a>
-            <a href="edumundo_assignments.html">Edumundo Assignments</a>
-
-
-        </nav>
-    </header>
-    <section class="home">
-        <div class="home-img">
-            <img src="photos/vika.png" alt="My Portfolio Photo">
-        </div>
-        <div class="home-content">
-            <h1>Hey, It's <span>Victoria</span></h1>
-            <h3 class="typing-text">I'm a <span></span></h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus labore dolores esse. Odit similique doloribus tenetur doloremque, sunt commodi in ipsa repudiandae debitis deleniti blanditiis quibusdam quaerat neque asperiores ea.</p>
-            <div class="social-icons">
-                <a href="https://www.linkedin.com/in/victoria-iascevschi-17647233a/"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="https://github.com/VictoriaIascevschi"><i class="fa-brands fa-github"></i></a>
-                <a href="https://www.instagram.com/yashchevskaaa?igsh=MWhvano3dWFvbTNtYQ=="><i class="fa-brands fa-instagram"></i></a>
-            </div>
-            <a href="reflection_report.html" class="btn">Read More</a>
-        </div>
-    </section>
-</body>
-</html>
+<script>window.location.href="mainpage.html"</script>
