--- a/mainpage.html
+++ b/mainpage.html
@@ -32,7 +32,12 @@
         <div class="home-content">
             <h1>Hey, It's <span>Victoria</span></h1>
             <h3 class="typing-text">I'm a <span></span></h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus labore dolores esse. Odit similique doloribus tenetur doloremque, sunt commodi in ipsa repudiandae debitis deleniti blanditiis quibusdam quaerat neque asperiores ea.</p>
+            <p>
+                My full name is Victoria Iascev&#537chi. I am 17 years old and I am from Ukraine. 
+                Currently, I am a first-year IT student at NHL Stenden University in Emmen, Netherlands. 
+                I have just recently started my way in exploring the IT world but I am really enjoying it. 
+                You can find more information about me by exploring my website. 
+            </p>
             <div class="social-icons">
                 <a href="https://www.linkedin.com/in/victoria-iascevschi-17647233a/"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/VictoriaIascevschi"><i class="fa-brands fa-github"></i></a>
