--- a/meeting_techniques.html
+++ b/meeting_techniques.html
@@ -13,7 +13,6 @@
         <a href="#" class="logo">Victoria</a>
         <nav>
             <a href="mainpage.html"> Home</a>
-
             <a href="reflection_report.html">Reflection Report</a>
             <a href="study_career_coaching.html">Study Career Coaching</a>
             <a href="feedbackforms.html">Feedbackforms</a>
@@ -22,9 +21,11 @@
             <a href="presentation.html">Presentation</a>
             <a href="meeting_techniques.html" class="active">Meeting Techniques</a>
             <a href="edumundo_assignments.html">Edumundo Assignments</a>
-
-
         </nav>
     </header>
+    <div class="edumundo_assignments">
+        <a href="documents/2024-2025 Agenda Meeting.pdf" target="_blank"><h2>You can click this link to download my Agenda</h2></a>
+        <a href="documents/2024-2025 Format Minutes of Meeting.pdf" target="_blank"><h2>You can click this link to download my Minutes of Meeting</h2></a>
+    </div>
 </body>
 </html>
