--- a/presentation.html
+++ b/presentation.html
@@ -26,5 +26,8 @@
 
         </nav>
     </header>
+    <div class="edumundo_assignments">
+       <a href="documents/Presentation PERIODE 1.key" target="_blank"><h2>You can press this link to download our group presentation from Period 1</h2></a>
+    </div>
 </body>
 </html>
