--- a/projectplan.html
+++ b/projectplan.html
@@ -24,5 +24,8 @@
             <a href="edumundo_assignments.html">Edumundo Assignments</a>
         </nav>
     </header>
+    <div class="edumundo_assignments">
+        <a href="documents/Project Plan IT-1D.pdf"><h2>You can use this link to download approved Project Plan Period 2</h2></a>
+    </div>
 </body>
 </html>
