--- a/communication.html
+++ b/communication.html
@@ -13,7 +13,6 @@
         <a href="#" class="logo">Victoria</a>
         <nav>
             <a href="mainpage.html"> Home</a>
-
             <a href="reflection_report.html">Reflection Report</a>
             <a href="study_career_coaching.html">Study Career Coaching</a>
             <a href="feedbackforms.html">Feedbackforms</a>
@@ -22,9 +21,10 @@
             <a href="presentation.html">Presentation</a>
             <a href="meeting_techniques.html">Meeting Techniques</a>
             <a href="edumundo_assignments.html">Edumundo Assignments</a>
-
-            
         </nav>
     </header>
+    <div class="edumundo_assignments">
+        <a href="documents/interview schedule IT-1D.docx"><h2>You can use this link to download Interview schedule IT-1D Period 2</h2></a>
+    </div>
 </body>
 </html>
