--- a/edumundo_assignments.html
+++ b/edumundo_assignments.html
@@ -29,7 +29,7 @@
         <a href="assignment4.html"><p>Assignment 4: Procrastination</p></a>
         <a href="assignment8.html"><p>Assignment 8: Working effectively on a daily basis</p></a>
 
-        <h1>Module Planning and Organising</h1>
+        <h1>Module Collaboration</h1>
         <a href="assignment1.1.html"><p>Assignment 1: The Importance of Collaboration</p></a>
         <a href="assignment3.html"><p>Assignment 3: Team roles</p></a>
         <a href="assignment8.8.html"><p>Assignment 8: Feedback</p></a>
