--- a/meeting_techniques.html
+++ b/meeting_techniques.html
@@ -25,7 +25,14 @@
     </header>
     <div class="edumundo_assignments">
         <a href="documents/2024-2025 Agenda Meeting.pdf" target="_blank"><h2>You can click this link to download my Agenda</h2></a>
-        <a href="documents/2024-2025 Format Minutes of Meeting.pdf" target="_blank"><h2>You can click this link to download my Minutes of Meeting</h2></a>
+        <a href="documents/2024-2025 Format Minutes of Meeting.pdf" target="_blank"><h2>You can click this link to download my Minutes of Meeting</h2></a><br>
+        <p>
+            Here you can find the valuation form which contains positive feedback from three of my current team
+            members on my communication skills:
+        </p>
+        <a href="documents/FredericMeetingsEvalForVictoria.pdf" target="_blank"><p>Team member - Frederic's Evaluation</p></a>
+        <a href="documents/Amir to vika (1).docx" target="_blank"><p>Team member - Amir's Evaluation</p></a>
+        <a href="documents/Victoria evaluation form (1).docx" target="_blank"><p>Team member - Anton's Evaluation</p></a>
     </div>
 </body>
 </html>
