--- a/reflection_report.html
+++ b/reflection_report.html
@@ -13,7 +13,6 @@
         <a href="#" class="logo">Victoria</a>
         <nav>
             <a href="mainpage.html"> Home</a>
-         
             <a href="reflection_report.html" class="active">Reflection Report</a>
             <a href="study_career_coaching.html">Study Career Coaching</a>
             <a href="feedbackforms.html">Feedbackforms</a>
@@ -22,8 +21,10 @@
             <a href="presentation.html">Presentation</a>
             <a href="meeting_techniques.html">Meeting Techniques</a>
             <a href="edumundo_assignments.html">Edumundo Assignments</a>
-
         </nav>
     </header>
+    <div class="edumundo_assignments">
+        <a href="documents/Reflection Report.pdf"><h2>You can use this link to download my Reflection Report</h2></a>
+    </div>
 </body>
 </html>
