--- a/study_career_coaching.html
+++ b/study_career_coaching.html
@@ -13,7 +13,6 @@
         <a href="#" class="logo">Victoria</a>
         <nav>
             <a href="mainpage.html"> Home</a>
-
             <a href="reflection_report.html">Reflection Report</a>
             <a href="study_career_coaching.html" class="active">Study Career Coaching</a>
             <a href="feedbackforms.html">Feedbackforms</a>
@@ -22,9 +21,10 @@
             <a href="presentation.html">Presentation</a>
             <a href="meeting_techniques.html">Meeting Techniques</a>
             <a href="edumundo_assignments.html">Edumundo Assignments</a>
-
-
         </nav>
     </header>
+    <div class="edumundo_assignments">
+        <a href="documents/2024-2025 1.2 Advisory Interview.pdf"><h2>1.2 Advisory Interview document</h2></a>
+    </div>
 </body>
 </html>
