Updated the whole portfolio

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -11,7 +11,6 @@
 <body>
     <header>
         <a href="#" class="logo">Victoria</a>
-
         <nav>
             <a href="mainpage.html"> Home</a>
             <a href="aboutpage.html" class="active">About</a>
@@ -19,7 +18,7 @@
             <a href="study_career_coaching.html">Study Career Coaching</a>
             <a href="feedbackforms.html">Feedbackforms</a>
             <a href="projectplan.html">Project Plan</a>
-
+            <a href="pdp.html">PDP</a>
         </nav>
     </header>
 </body>
