--- a/edumundo_assignments.html
+++ b/edumundo_assignments.html
@@ -21,18 +21,24 @@
             <a href="presentation.html">Presentation</a>
             <a href="meeting_techniques.html">Meeting Techniques</a>
             <a href="edumundo_assignments.html" class="active">Edumundo Assignments</a>
+            <a href="pdp.html">PDP</a>
         </nav>
     </header>
     <div class="edumundo_assignments">
         <h1>Module Planning and Organising</h1>
         <a href="assignment1.html"><p>Assignment 1: The importance of Planning</p></a>
+        <a href="assignmentPlanning.html"><p>Assignment 2: Setting and Achieving Goals</p></a>
+        <a href="prioritising.html"><p>Assignment 3: Prioritising Using the Time Management Matrix</p></a>
         <a href="assignment4.html"><p>Assignment 4: Procrastination</p></a>
         <a href="assignment8.html"><p>Assignment 8: Working effectively on a daily basis</p></a>
 
         <h1>Module Collaboration</h1>
         <a href="assignment1.1.html"><p>Assignment 1: The Importance of Collaboration</p></a>
+        <a href="documents/Reflection+on+Team+Work+so+far.pdf"><p>Assignment 2: Reflection on Team Work So Far</p></a>
         <a href="assignment3.html"><p>Assignment 3: Team roles</p></a>
+        <a href="collaboration.assignment4.html"><p>Assignment 4: Collaborative Goals</p></a>
         <a href="assignment8.8.html"><p>Assignment 8: Feedback</p></a>
+        <a href="assignment10.html"><p>Assignment 10: 360 Degrees Feedback</p></a>
 
         <h1>Module Explore your Opportunities</h1>
         <a href="assignment2.html">Assignment 2: Explore your Study Programme</a>
