--- a/feedbackforms.html
+++ b/feedbackforms.html
@@ -22,6 +22,7 @@
             <a href="presentation.html">Presentation</a>
             <a href="meeting_techniques.html">Meeting Techniques</a>
             <a href="edumundo_assignments.html">Edumundo Assignments</a>
+            <a href="pdp.html">PDP</a>
         </nav>
     </header>
     <div class="edumundo_assignments">
@@ -92,6 +93,20 @@
             I trust you will complete any task you set your mind to. I sometimes don’t feel the need to offer assistance, but I know if
             you have a problem you will always speak up. Don’t change yourself, continue to be yourself.
         </p>
+        <br>
+        <a href="#"><h2>360 Degrees Feedback Forms written by students/friends/family members</h2></a><br>
+        <h2>1. Feedback from a friend Airaa Srinivasan</h2>
+        <a href="documents/360 Degrees Feedbackform - Victoria.docx"><h2>Click Here</h2></a>
+        <h2>2. Feedback from a lecturer Miguel Ranchor</h2>
+        <a href="documents/360 Fb Victoria.docx"><h2>Click Here</h2></a>
+        <h2>3. Feedback from a Project Innovate-team member Flavius Petra&#537cuik</h2>
+        <a href="documents/360Feedback_Viktoria.docx"><h2>Click Here</h2></a>
+        <h2>4. Feedback from a Project Innovate-team member Kyan Jeuring</h2>
+        <a href="documents/360 Degrees Feedbackform - Vika.docx"><h2>Click Here</h2></a>
+        <h2>5. Feedback from a previous team member Amir Ranjbar</h2>
+        <a href="documents/360 to Vika.docx"><h2>Click Here</h2></a>
+        <h2>6. Feedback from a brother Roman Ia&#537cevschi</h2>
+        <a href="documents/360 Degrees Feedbackform (4) (1).docx"><h2>Click Here</h2></a>
     </div>
 </body>
 </html>
