--- a/mainpage.html
+++ b/mainpage.html
@@ -21,8 +21,7 @@
             <a href="presentation.html">Presentation</a>
             <a href="meeting_techniques.html">Meeting Techniques</a>
             <a href="edumundo_assignments.html">Edumundo Assignments</a>
-
-
+            <a href="pdp.html">PDP</a>
         </nav>
     </header>
     <section class="home">
@@ -33,7 +32,7 @@
             <h1>Hey, It's <span>Victoria</span></h1>
             <h3 class="typing-text">I'm a <span></span></h3>
             <p>
-                My full name is Victoria Iascev&#537chi. I am 17 years old and I am from Ukraine. 
+                My full name is Victoria Iascev&#537chi. I am 18 years old and I am from Ukraine. 
                 Currently, I am a first-year IT student at NHL Stenden University in Emmen, Netherlands. 
                 I have just recently started my way in exploring the IT world but I am really enjoying it. 
                 You can find more information about me by exploring my website. 
