--- a/pdp.html
+++ b/pdp.html
@@ -19,14 +19,14 @@
             <a href="feedbackforms.html">Feedbackforms</a>
             <a href="projectplan.html">Project Plan</a>
             <a href="communication.html">Communication</a>
-            <a href="presentation.html" class="active">Presentation</a>
+            <a href="presentation.html">Presentation</a>
             <a href="meeting_techniques.html">Meeting Techniques</a>
             <a href="edumundo_assignments.html">Edumundo Assignments</a>
-            <a href="pdp.html">PDP</a>
+            <a href="pdp.html" class="active">PDP</a>
         </nav>
     </header>
     <div class="edumundo_assignments">
-       <a href="documents/Presentation PERIODE 1.key" target="_blank"><h2>You can press this link to download our group presentation from Period 1</h2></a>
+       <a href="documents/2024 - 2025 Personal Development Plan.docx"><h2>My Personal Development Plan</h2></a>
     </div>
 </body>
 </html>
