--- a/projectplan.html
+++ b/projectplan.html
@@ -22,6 +22,7 @@
             <a href="presentation.html">Presentation</a>
             <a href="meeting_techniques.html">Meeting Techniques</a>
             <a href="edumundo_assignments.html">Edumundo Assignments</a>
+            <a href="pdp.html">PDP</a>
         </nav>
     </header>
     <div class="edumundo_assignments">
