--- a/study_career_coaching.html
+++ b/study_career_coaching.html
@@ -21,10 +21,14 @@
             <a href="presentation.html">Presentation</a>
             <a href="meeting_techniques.html">Meeting Techniques</a>
             <a href="edumundo_assignments.html">Edumundo Assignments</a>
+            <a href="pdp.html">PDP</a>
         </nav>
     </header>
     <div class="edumundo_assignments">
+        <h2>Period 2:</h2>
         <a href="documents/2024-2025 1.2 Advisory Interview.pdf"><h2>1.2 Advisory Interview document</h2></a>
+        <h2>Period 4:</h2>
+        <a href="documents/1.4 Final Interview(1).pdf"><h2>1.4 Final Interview document</h2></a>
     </div>
 </body>
 </html>
