Finished the portfolio

--- a/communication.html
+++ b/communication.html
@@ -29,10 +29,10 @@
         <h3>Communication Evaluation form including positive feedback from Project innovate-team members and client(s) on student’s communication.</h3>
         <a href="documents/Communication Evaluation Form.docx"><p>Form completed by David Corodeanu</p></a>
         <a href="documents/Communication Evaluation Form Kyan.docx"><p>Form completed by Kyan Jeuring</p></a>
-        <a href="documents"><p>Form completed by Ai Nguyen</p></a>
-        <a href="documents/Communication Evaluation Form  Bence.docx"><p>Form completed by Bence Mohr</p></a>
+        <a href="documents/Victoria Communication Evaluation Form Ai.docx"><p>Form completed by Ai Nguyen</p></a>
+        <a href="documents/Communication Evaluation Form ben.docx"><p>Form completed by Bence Mohr</p></a>
         <a href="documents/CommunicationEvaluation - Viktoria.docx"><p>Form completed by Flavius Petra&#537cuik</p></a>
-        <a href=""><p>Form completed by Sara Kiani Nejad</p></a>
+        <a href="documents/Communication Evaluation Form - Sara.docx"><p>Form completed by Sara Kiani Nejad</p></a>
     </div>
 </body>
 </html>
