--- a/pdp.html
+++ b/pdp.html
@@ -27,6 +27,7 @@
     </header>
     <div class="edumundo_assignments">
        <a href="documents/2024 - 2025 Personal Development Plan.docx"><h2>My Personal Development Plan</h2></a>
+       <a href="documents/PDP Proof.pdf" target="_blank"><h2>Here is the proof that I achieved all my three goals.</h2></a>
     </div>
 </body>
 </html>
