--- a/presentation.html
+++ b/presentation.html
@@ -27,6 +27,7 @@
     </header>
     <div class="edumundo_assignments">
        <a href="documents/Presentation PERIODE 1.key" target="_blank"><h2>You can press this link to download our group presentation from Period 1</h2></a>
+       <a href="photos/Charlotte's feedback.pdf" target="_blank"><h2>You can press this link to see Charlotte's feedback form to my personal presentation in Period 2</h2></a>
     </div>
 </body>
 </html>
