--- a/projectplan.html
+++ b/projectplan.html
@@ -27,6 +27,8 @@
     </header>
     <div class="edumundo_assignments">
         <a href="documents/Project Plan IT-1D.pdf"><h2>You can use this link to download approved Project Plan Period 2</h2></a>
+        <a href="documents/ProjectPlan.pdf"><h2>You can use this link to download approved Project Plan Period 4</h2></a>
+        <a href="documents/Deafinity_Advisory_Report.pdf" target="_blank"><h2>You can use this link to download Technical Advisory Report Period 4</h2></a>
     </div>
 </body>
 </html>
