--- a/reflection_report.html
+++ b/reflection_report.html
@@ -28,7 +28,7 @@
         <h2>Period 2:</h2>
         <a href="documents/Reflection Report.pdf"><h2>You can use this link to download my Reflection Report</h2></a>
         <h2>Period 4:</h2>
-        <a href=""><h2>You can use this link to download my Reflection Report</h2></a>
+        <a href="documents/Reflection Report Period 4.pdf"><h2>You can use this link to download my Reflection Report</h2></a>
     </div>
 </body>
 </html>
