--- a/mainpage.html
+++ b/mainpage.html
@@ -33,8 +33,8 @@
             <h3 class="typing-text">I'm a <span></span></h3>
             <p>
                 My full name is Victoria Iascev&#537chi. I am 18 years old and I am from Ukraine. 
-                Currently, I am a first-year IT student at NHL Stenden University in Emmen, Netherlands. 
-                I have just recently started my way in exploring the IT world but I am really enjoying it. 
+                Currently, I am a second-year IT student at NHL Stenden University in Emmen, Netherlands. 
+                I'm learning far beyond the IT world—explore my website to see the full scope of my skills. 
                 You can find more information about me by exploring my website. 
             </p>
             <div class="social-icons">
